# EZ-Housing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  house.ipynb  main.py  pyproject.toml
dags/: housing_dag.py
images/airflow-worker/: Dockerfile
images/mongodb/: Dockerfile
k8s-config/: airflow-configmap.yaml  airflow-dags-pvc.yaml  airflow-db-init-job.yaml  airflow-scheduler-deployment.yaml  airflow-webserver-deployment.yaml  airflow-webserver-service.yaml  airflow-worker-deployment.yaml  mongodb-deployment-service.yaml  mongodb-pvc.yaml  postgres-deployment-service.yaml  postgres-pvc.yaml  redis-deployment-service.yaml
mongodb/: create-index.js
src/: extract.py  load.py  prepare_report.py  send_report.py  transform.py
src/test/: query_db.py
src/utils/: db_queries.py  general.py
utils/: general.py
