[tool.poetry]
name = "ez-housing"
version = "0.1.0"
description = ""
authors = ["Giuseppe <giuseppe.fur96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
selenium = "^4.18.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
